Various scumday fixes

--- a/styles/all/template/event/index_body_block_birthday_append.html
+++ b/styles/all/template/event/index_body_block_birthday_append.html
@@ -1,4 +1,4 @@
 </p>
 <h3>{L_SCUMDAYS}</h3>
 <p>
-	<!-- IF .scumdays -->{L_CONGRATULATIONS}{L_COLON} <strong><!-- BEGIN scumdays -->{scumdays.USERNAME}<!-- IF not scumdays.S_LAST_ROW -->, <!-- ENDIF --><!-- END scumdays --></strong><!-- ELSE -->{L_NO_SCUMDAYS}<!-- ENDIF -->
+	<!-- IF .scumdays -->{L_CONGRATULATIONS}{L_COLON} <strong><!-- BEGIN scumdays -->{scumdays.USERNAME}<!-- IF not scumdays.S_LAST_ROW -->, <!-- ENDIF --><!-- END scumdays --></strong><!-- ELSE -->{{ lang('NO_SCUMDAYS') }}<!-- ENDIF -->
